return referral history object
